Archive2/06/439b7e1baca8b9/output
main.cpp:35:51: error: template argument 2 is invalid
 SquareMatrix<Scalar, Vector3().GetErrorStateSize()> GetSquareMatrixOfSize3() {
                                                   ^
main.cpp: In function 'int GetSquareMatrixOfSize3()':
main.cpp:37:1: warning: no return statement in function returning non-void [-Wreturn-type]
 }
 ^
main.cpp: In function 'int main()':
main.cpp:49:103: error: request for member 'kLocalSize' in 'matrix_3', which is of non-class type 'int'
   std::cout << "Matrix sizes: " << matrix.kLocalSize << " " << matrix_2.kLocalSize << " " << matrix_3.kLocalSize << std::endl;
                                                                                                       ^
